syntax = "proto3";

option csharp_namespace = "LabsDb.Agent";

package labsdb.agent;

service Agent {
  rpc Auth (AuthRequest) returns (ResponseEmployee);
  rpc AddNewIndication (NewRequest) returns (NewResponse);
}

message AuthRequest {
  string login = 1;
  string password = 2;
}

message ResponseEmployee {
  int32 id = 1;
  string login = 2;
  string password = 3;
}

message NewRequest{
  string title = 1;
  double value = 2;
  int32 house = 3;
  int32 nowEmployee = 4;
}

message NewResponse{
  bool res = 1;
}